--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
     androidTestImplementation "com.google.dagger:dagger:2.17"
     kaptAndroidTest 'com.google.dagger:dagger-compiler:2.17'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 }
