--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,7 @@ dependencies {
     androidTestImplementation 'com.github.fabioCollini.daggermock:daggermock-kotlin:0.8.5'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
     androidTestImplementation "com.google.dagger:dagger:2.17"
+    androidTestImplementation 'org.mockito:mockito-android:2.22.0'
     kaptAndroidTest 'com.google.dagger:dagger-compiler:2.17'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 }
