--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ android {
     testOptions {
         unitTests {
             includeAndroidResources = true
+            returnDefaultValues = true
         }
     }
 }
